--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,3 +1,9 @@
-log4j.logger.org.apache.spark=ERROR
 log4j.logger.Remoting=ERROR
+log4j.logger.akka.event.slf4j=ERROR
+log4j.logger.org.spark-project.jetty.server=ERROR
+log4j.logger.org.apache.spark=ERROR
+log4j.logger.com.anjuke.dm=ERROR
 log4j.logger.org.eclipse.jetty=ERROR
+log4j.logger.org.eclipse.jetty.util.component.AbstractLifeCycle=ERROR
+log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=ERROR
+log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=ERROR
