Lower scalacheck iterations from 10 to 5 on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ scala:
 sbt_args: "-J-Xmx2G"
 
 script:
-  - travis_wait 65 scripts/travis-publish.sh
+  - scripts/travis-publish.sh
   - find $HOME/.sbt -name "*.lock" | xargs rm
   - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
 
