--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,9 @@ jobs:
       - name: Check that workflows are up to date
         run: sbt ++${{ matrix.scala }} githubWorkflowCheck
 
+      - name: Binary compatibility check
+        run: sbt ++${{ matrix.scala }} mimaReportBinaryIssues
+
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
