--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -19,6 +19,7 @@ OrganizeImports {
     "org.apache.hadoop",
     "org.apache.log4j",
     "org.apache.spark.sql.", "org.apache.spark.streaming.",
+    "shapeless",
     "_root_.cats", "cats.",
     "*",
     "org.scalatest", "org.scalacheck.", "org.scalactic.",
