--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -38,6 +38,7 @@ assumeStandardLibraryStripMargin = true
 docstrings {
   style = Asterisk
   oneline = unfold
+  wrap = no
 }
 
 project.git = true
