--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,14 +60,28 @@ jobs:
         run: pip install codecov
 
       - name: Test & Compute Coverage
-        run: sbt ++${{ matrix.scala }} coverage test coverageReport
+        run: |
 
+          if [[ "${{ matrix.scala }}" =~ ^"2.13"* ]]; then
+              sbt ++${{ matrix.scala }} coverage test-latest coverageReport-latest
+          else
+              sbt ++${{ matrix.scala }} coverage test coverageReport
+          fi
+
+      
       - name: Upload Codecov Results
         run: codecov -F ${{ matrix.scala }}
 
       - name: Binary compatibility check
-        run: sbt ++${{ matrix.scala }} mimaReportBinaryIssues
+        run: |
 
+          if [[ "${{ matrix.scala }}" =~ ^"2.13"* ]]; then
+              sbt ++${{ matrix.scala }} mimaReportBinaryIssues-latest
+          else
+              sbt ++${{ matrix.scala }} mimaReportBinaryIssues
+          fi
+
+  
   publish:
     name: Publish Artifacts
     needs: [build]
