--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,8 @@ jobs:
         java: [8]
         distribution: [temurin]
     runs-on: ${{ matrix.os }}
+    env:
+      SPARK_LOCAL_IP: localhost
     steps:
       - uses: actions/checkout@v2
         with:
