--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
         scala: [2.13.8, 2.12.15]
         java: [temurin@8]
         project: [root-spark30, root-spark31, root-spark32]
+        exclude:
+          - scala: 2.13.8
+            project: root-spark30
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
