--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
         exclude:
           - scala: 2.13.8
             project: root-spark30
+          - scala: 2.13.8
+            project: root-spark31
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
