--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,12 +137,42 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
+      - name: Download target directories (2.13.8, root-spark32)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.8-root-spark32
+
+      - name: Inflate target directories (2.13.8, root-spark32)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
       - name: Download target directories (2.12.15, root-spark30)
         uses: actions/download-artifact@v2
         with:
           name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-root-spark30
 
       - name: Inflate target directories (2.12.15, root-spark30)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.12.15, root-spark31)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-root-spark31
+
+      - name: Inflate target directories (2.12.15, root-spark31)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.12.15, root-spark32)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-root-spark32
+
+      - name: Inflate target directories (2.12.15, root-spark32)
         run: |
           tar xf targets.tar
           rm targets.tar
