--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,14 @@ jobs:
         os: [ubuntu-latest]
         scala: [2.13.10, 2.12.16]
         java: [temurin@8]
-        project: [root-spark31, root-spark32, root-spark33]
+        project: [root-spark31, root-spark32, root-spark33, root-spark34]
         exclude:
           - scala: 2.13.10
             project: root-spark31
           - scala: 2.13.10
             project: root-spark32
+          - scala: 2.13.10
+            project: root-spark33
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -205,5 +207,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: mdocs/target/docs/site
+          publish_dir: mdocs\target\docs\site
           keep_files: true
