#698 - regenerated has windows path for mdocs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,5 +207,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: mdocs\target\docs\site
+          publish_dir: mdocs/target/docs/site
           keep_files: true
