--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,9 @@ jobs:
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
 
+      - name: Check code style
+        run: sbt '++ ${{ matrix.scala }}' 'project ${{ matrix.project }}' scalafmtSbtCheck scalafmtCheck
+
       - name: Test & Compute Coverage
         run: sbt '++ ${{ matrix.scala }}' 'project ${{ matrix.project }}' coverage test test/coverageReport
 
