--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,6 +9,7 @@ newlines.implicitParamListModifierForce = [after]
 newlines.avoidForSimpleOverflow = [tooLong]
 newlines.avoidInResultType = true
 newlines.sometimesBeforeColonInMethodReturnType = false
+newlines.beforeTypeBounds = keep
 
 verticalMultiline.atDefnSite = true
 verticalMultiline.arityThreshold = 10
