--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
 
       - uses: codecov/codecov-action@v3
         with:
-          flags: ${{ matrix.scala }},${{ matrix.project }}
+          flags: ${{ matrix.scala }}-${{ matrix.project }}
 
   publish:
     name: Publish Artifacts
