--- a/dataset/src/test/resources/log4j2.properties
+++ b/dataset/src/test/resources/log4j2.properties
@@ -22,3 +22,7 @@ logger.spark.level = warn
 
 logger.hadoop.name = org.apache.hadoop
 logger.hadoop.level = warn
+
+# To debug expressions:
+#logger.codegen.name = org.apache.spark.sql.catalyst.expressions.codegen.CodeGenerator
+#logger.codegen.level = debug
